Added nested test cases